<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".mvvm.presentation.screens.SeeEventFRagment.SeeEventFragment">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textSize="26sp"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_name"
            android:textSize="26sp"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_name"
            android:textSize="26sp"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descr"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="26sp"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/tv_date_and_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_name"
            android:textSize="26sp"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/ll_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_and_time">

            <TextView
                android:id="@+id/tv_weather_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Дата" />

            <TextView
                android:id="@+id/tv_dress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textStyle="bold"
                tools:text="Адресс" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_celcius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_weather">

            <LinearLayout
                android:id="@+id/ll_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="21dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/ll_weather">

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:text="@string/temp_from_network_name" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/description_name"  />

            </LinearLayout>

            <ImageView
                android:id="@+id/tv_image_weather"
                android:layout_margin="12dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/turn_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_celcius"
            android:text="@string/turn_back_btn_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>