<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="test.mertech.eventplanner.mvvm.presentation.screens.eventScreen.EventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvm.presentation.screens.MainScreen.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:errorInputTitle="@{vm.errorInputTitle}"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/title_name"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/description_name"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:errorInputDate="@{vm.errorInputDate}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout_description">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/inputEditText_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_name"
                    app:mask="##-##-####" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:errorInputCity="@{vm.errorInputCity}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/city_name"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:errorInputStreet="@{vm.errorInputStreet}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/street_name"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/house_name"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_spinner"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout_house"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/status_of_event"
                    android:layout_marginBottom="5dp"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:entries="@array/status"
                    app:layout_constraintTop_toBottomOf="@id/inputLayout_house"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="21dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_spinner">

                <TextView
                    android:id="@+id/tv_weather_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/date_name" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/address_from_network_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_celcius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="21dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_weather">

                <LinearLayout
                    android:id="@+id/ll_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/ll_weather">

                    <TextView
                        android:id="@+id/tv_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="36"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:text="@string/temp_from_network_name"  />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:text="@string/description_name"  />

                </LinearLayout>

                <ImageView
                    android:id="@+id/tv_image_weather"
                    android:layout_margin="12dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_celcius"
                android:text="@string/save_btn_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>